# genre_identifier

./: .gitignore  classify.py  data_manager.py  pyproject.toml  train.py
audio/: dataset.py  helpers.py
data_manager/: app.py  data_manager.py  download_widget.py  file_info_widget.py
data_manager/dataset_section/: dataset_section.py  download_widget.py  track_table_model.py
data_manager/training_section/: training_section.py
neural_network/: nn.py
utility/: audio.py  general.py  torch.py
